refactored CORS config for clarity